--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-    
+    <input type="text" placeholder="please enter bill amount" id="bill-amount"/>
+    <button id="calculate-tip">calculate tip</button>
+    <p id="tip-amount"></p>
+
     <script src="script.js"></script>
 </body>
 </html>
